--- a/main.tex
+++ b/main.tex
@@ -241,7 +241,7 @@ and language and multimodal resources.
 \item Liane Guillou, University of Edinburgh, UK
 \item Francisco Guzm\'{a}n, Qatar Computing Research Institute, Doha, Qatar
 \item Gholamreza Haffari, Monash University, Clayton, Australia
-\item Shafiq Joty, Qatar Computing Research Institute, Doha, Qatar (confirmed)
+\item Shafiq Joty, Nanyang Technological University, Singapore (confirmed)
 \item Ekaterina Lapshinova-Kultunsky, Saarland University, Saarbrücken, Germany 
 \item Lori Levin, Language Technologies Institute, Carnegie Mellon University, Pittsburgh, PA, USA
 \item Lesly Miculicich-Werlen, Idiap Research Institute, Martigny, Switzerland (confirmed)
@@ -252,7 +252,7 @@ and language and multimodal resources.
 \item Maja Popovic, DFKI, Berlin DE
 \item Annette Rios, University of Zurich, Switzerland
 \item Rico Sennrich, University of Edinburgh, UK (confirmed)
-\item Lucia Specia, University of Sheffield, UK
+\item Lucia Specia, Imperial College London, UK
 \item Sara Stymne, Uppsala University, Uppsala, Sweden
 \item Jörg Tiedemann, University of Helsinki, Finland (confirmed)
 \item Yannick Versley, University of Heidelberg, Heidelberg, Germany
