updated some affiliations

--- a/main.tex
+++ b/main.tex
@@ -239,7 +239,7 @@ and language and multimodal resources.
 \item Marta Costa-jussà, Universitat Politècnica de Catalunya, Spain (confirmed)
 \item Zhengxian Gong, Soochow University, China (confirmed)
 \item Liane Guillou, University of Edinburgh, UK
-\item Francisco Guzm\'{a}n, Qatar Computing Research Institute, Doha, Qatar
+\item Francisco Guzm\'{a}n, Facebook, US
 \item Gholamreza Haffari, Monash University, Clayton, Australia
 \item Shafiq Joty, Nanyang Technological University, Singapore (confirmed)
 \item Ekaterina Lapshinova-Kultunsky, Saarland University, Saarbrücken, Germany 
