Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -38,30 +38,29 @@
 \begin{document}
 
 \begin{center}
-\Large{\textbf{Proposal for the Fourth Workshop on Discourse in Machine Translation DiscoMT 2019}}
+\Large{\textbf{Proposal for the Fourth Workshop on Discourse in Machine Translation: DiscoMT 2019}}\\
+\url{https://www.idiap.ch/workshop/DiscoMT}
 \end{center}
 
-\section{Description and justification}
+% APB: as we need it for advertisement anyway, why shouldn't we put here the tagline?
+% => A very brief advertisement or tagline for the workshop, up to 140 characters, that highlights any key information you wish prospective attendees to know, and which would be suitable to be put onto a web-based survey (see below).
 
-\textcolor{magenta}{2 pages max for description only}
+% APB: following "plan" suggested in the call for workshops
+% (not a very well structured "plan" !)
 
-\textcolor{magenta}{- Goal to wide context in MT.} 
+\section{Workshop Topic and Content}
 
-\textcolor{magenta}{- Lots of work on context-wide MT, but community is lacking cohesion somehow.}
+%\textcolor{magenta}{2 pages max for description only}
+%\textcolor{magenta}{- Goal to wide context in MT.} 
+%\textcolor{magenta}{- Lots of work on context-wide MT, but community is lacking cohesion somehow.}
+%\textcolor{magenta}{- Goal to promote that people work on the same body of resources: those on the repository https://bitbucket.org/hy-crossNLP/discomt/wiki/Home } 
+%\textcolor{magenta}{- Weight on more linguistic stuff}
+%\textcolor{magenta}{- Throw out rule-based, start history with SMT, add paragraph what's going on on NMT}
+%\textcolor{magenta}{- Work on MT evaluation through test suites that has been going on}
+%\textcolor{magenta}{- Human parity discussion that has been going on }
 
-\textcolor{magenta}{- Goal to promote that people work on the same body of resources: those on the repository https://bitbucket.org/hy-crossNLP/discomt/wiki/Home } 
 
-\textcolor{magenta}{- Weight on more linguistic stuff}
-
-\textcolor{magenta}{- Throw out rule-based, start history with SMT, add paragraph what's going on on NMT}
-
-\textcolor{magenta}{- Work on MT evaluation through test suites that has been going on}
-
-\textcolor{magenta}{- Human parity discussion that has been going on }
-
-\textcolor{magenta}{- Idea of invited speakers: invite them, funding... Potential names: Kellie Webster (Google), Andy Way (Dublin)}
-
-\textcolor{magenta}{Website should be up an running. }
+%\textcolor{magenta}{Website should be up an running. }
 
 When translating entire texts, as opposed to individual sentences only, 
 one cannot ignore text-level properties. This is becoming increasingly
@@ -137,16 +136,122 @@ translation in the past two years has opened new opportunities for modeling
 text-level properties with deep neural networks, and we expect to see a number
 of results presented and discussed at DiscoMT 2017.
 
+%%\textcolor{magenta}{- Idea of invited speakers: invite them, funding... Potential names: Kellie Webster (Google), Andy Way (Dublin)}
+% APB: the workshop will consist of invited talks and regular talks
+% + explain why no there is shared task this time
+% explain the idea of the joint poster session with WMT, and that all DiscoMT papers are also encouraged to do posters
 
-\section{Previous editions of DiscoMT: 2013 and 2015}
+% APB: explain here:
+% To allow for sufficient novelty and volume of research contributions, the organizers decided to hold DiscoMT every two years. 
 
-\textcolor{magenta}{Move to the end. Include stats about how many participants we had before.} 
+% \section{Timeline}
+% \textcolor{magenta}{ACL: call for papers before Christmas and deadline 26 April, notification 24 May. Reviewing will happen in May then.} 
+% APB: For the timeline, simply say that we will respect the one given by ACL!
 
-\textcolor{magenta}{Include DiscoMT2017.} 
+%--------------------------------------------------------------
 
+
+\section{Organizers}
+
+%\textbf{How DiscoMT will be organized.}
+DiscoMT 2019 will have three organizers, who are co-chairing the workshop.  They will have responsibility for scientific and administrative matters involved in delivering a high-quality workshop.  The members of the \textbf{Programme Committee} listed below will mainly be responsible for reviewing submissions, but they will also be consulted for matters related to the organization and intellectual content of the workshop, and will help advertise the workshop.
+
+% The names, affiliations, and email addresses of the organizers, with one-paragraph statements of their research interests, areas of expertise, and experience in organizing workshops and related events.
+
+\textbf{Christian Hardmeier}
+
+
+\textbf{Sharid Loáiciga}
+
+\textbf{Andrei Popescu-Belis} (\texttt{andrei.popescu-belis@heig-vd.ch}) is a professor at the School of Management and Engineering Vaud (HEIG-VD), an institution that is part of the University of Applied Sciences and Arts of Western Switzerland (HES-SO).  He has been a group leader at the Idiap Research Institute, a senior researcher at the University of Geneva, and is a lecturer at the Swiss Federal Institute of Technology (EPFL).  His research focuses on language processing at the discourse-level, in particular reference and anaphora resolution, discourse markers and connectives, and dialogue acts.  Among his other interests are: the evaluation of NLP and interactive systems, including machine translation systems and meeting browsers; and language and multimodal resources.  He has been a co-chair of all past editions of DiscoMT, and serves annually as a reviewer for the major *ACL events.  He has also chaired two Machine Learning and Multimodal Interaction workshops and has been area chair for discourse at ACL 2012.
+
+
+\section{Program Committee}
+
+%\textcolor{magenta}{75\% should be approved}
+
+\begin{itemize} \setlength{\itemsep}{0pt}
+\item Beata Beigman Klebanov, Educational Testing Service, New Jersey, USA
+\item Thomas Brovelli, Google, Zurich, Switzerland %is he still doing research in MT?
+\item Marine Carpuat, University of Washington, Seattle, USA
+\item Mauro Cettolo, Fondazione Bruno Kessler, Trento, Italy
+\item Marta Costa-jussà, Universitat Politècnica de Catalunya, Spain (confirmed)
+\item Zhengxian Gong, Soochow University, China (confirmed)
+\item Liane Guillou, University of Edinburgh, UK
+\item Francisco Guzm\'{a}n, Facebook, USA
+\item Gholamreza Haffari, Monash University, Clayton, Australia
+\item Shafiq Joty, Nanyang Technological University, Singapore (confirmed)
+\item Ekaterina Lapshinova-Kultunsky, Saarland University, Saarbrücken, Germany 
+\item Lori Levin, Language Technologies Institute, Carnegie Mellon University, Pittsburgh, PA, USA % APB: is she still around and active? 
+\item Lesly Miculicich Werlen, Idiap Research Institute, Martigny, Switzerland (confirmed)
+\item Preslav Nakov, Qatar Computing Research Institute, Doha, Qatar (confirmed)
+\item Ani Nenkova, University of Pennsylvania, USA
+\item Michal Novak, Charles University, Prague CZ % APB: are we still in contact with him?
+\item Lucie Pol\'{a}kov\'{a}, Charles University, Prague CZ % APB: are we still in contact with her?
+\item Maja Popovic, DFKI, Berlin DE
+\item Annette Rios, University of Zurich, Switzerland
+\item Rico Sennrich, University of Edinburgh, UK (confirmed)
+\item Lucia Specia, Imperial College London, UK
+\item Sara Stymne, Uppsala University, Uppsala, Sweden
+\item Jörg Tiedemann, University of Helsinki, Finland (confirmed)
+\item Yannick Versley, University of Heidelberg, Heidelberg, Germany % no longer at Heidelberg, indep consultant, not clear if he still wants to review for DiscoMT
+\item Martin Volk, University of Zurich, Zurich, Switzerland
+\item Bonnie Webber, University of Edinburgh, UK
+\item Kellie Webster, Google, New York, US (confirmed)
+\item Min Zhang, Soochow University, Suzhou, China
+\item Sandrine Zufferey, University of Bern, Switzerland (confirmed)
+\end{itemize}
+
+% do we want to include:
+% Yulia Grishina (former PhD student of MAnfred Stede) -> SL: yes
+% Guillaume Lample (PhD student at UPMC, also at Facebook, etc,) -> SL: not sure he does discourse, APB: not really, but working on NMT, so he could review papers on using larger contexts in NMT ("document-level")
+% Nikolaos Pappas from Idiap -> SL: yes
+% maybe Carol Scarton, former PhD student of Lucia (on QE at discourse level) -> SL: yes
+% Arianna Bisazza (or Luisa Bentivogli?) -> SL: they don't seem to do discourse really APB: OK (but they did nice evaluation work)
+
+\section{Invited Speakers} % and sources for funding}
+
+Invited speakers: Kellie Webster (Google), and Andy Way (Dublin).  Include biographies.
+
+
+\section{Diversity}
+
+Account of efforts for diversity of speakers, program committee members and participants
+
+Balance invited speakers
+
+Balance committee: gender, geography, community is very Europe-oriented, but active efforts to recruit people from outside Europe, compared to previous years.
+
+Gender balance in PCs: female/male: 7/18 in 2013 (total 25), 11/11 in 2015 (total 22), 9/14 (total 23).  Quite good!  And this year: 16/14 approximate!
+
+
+
+\section{Other Information}
+
+\begin{itemize}
+\item \textbf{Proposed workshop length:} One day.  Ideally, this would coincide with
+the second day of the Conference on Machine Translation (WMT), so that the two workshops could
+share a poster session, as has been the case in the past editions of DiscoMT.
+
+\item \textbf{Estimated number of attendees:} 25-30 people
+
+\item \textbf{Special requirements or technical needs:} None
+
+\item \textbf{Preferred venue:} \textcolor{magenta}{ACL Florence, community is mostly in Europe but mainly WMT will try to be there and we want to be together.} 
+\end{itemize}
+
+
+
+
+% -----------------------------------------------------------
+\section{Previous Editions of DiscoMT: 2013, 2015 and 2017}
+
+\textcolor{magenta}{Include stats about how many participants we had before. Include DiscoMT2017.} 
+
+% APB: shorten and try to do a table with the numbers 
 The growing interest in discourse and MT led to the first
 \textit{ACL Workshop on Discourse in Machine Translation (DiscoMT)} in 2013,
-held in Sofia, Bulgaria.\footnote{Bonnie Webber  and  Andrei Popescu-Belis  and  Katja Markert  and  J\"{o}rg Tiedemann. (2013). \textit{Proceedings of the Workshop on Discourse in Machine Translation (DiscoMT)}. Sofia, Bulgaria. Association for Computational Linguistics. \url{http://www.aclweb.org/anthology/W13-33}.}
+held in Sofia, Bulgaria.\footnote{Bonnie Webber  and  Andrei Popescu-Belis  and  Katja Markert  and  J\"{o}rg Tiedemann. (2013). \textit{Proceedings of the Workshop on Discourse in Machine Translation (DiscoMT)}. Sofia, Bulgaria. Association for Computational Linguistics. \url{http://aclweb.org/anthology/W13-3300}.}
 The workshop
 featured eight papers on such topics as lexical consistency in human and
 machine translation, lexical tightness as a whole-document
@@ -158,13 +263,25 @@ there were 12 submissions, 6 of which were accepted as oral presentations and
 describing their work, and all resulting posters were presented in joint
 poster session with WMT 2013, thus offering DiscoMT an increased visibility.
 
-To allow for sufficient novelty and volume of research contributions, the
-organizers decided to hold DiscoMT every two years.  For the second
+ For the second
 \textit{EMNLP Workshop on Discourse in Machine Translation (DiscoMT 2015)},
-held in Lisbon, Portugal,\footnote{Webber, B., Carpuat, M., Popescu-Belis, A., \& Hardmeier, C. (2015). \textit{Proceedings of the Second Workshop on Discourse in Machine Translation (DiscoMT 2015)}. Lisbon, Portugal. Association for Computational Linguistics.  \url{https://aclweb.org/anthology/W/W15/\#2500}.}, the number of submitted and accepted paper had increased.  We maintained the idea of a joint poster session with WMT.  Out of 15 submissions,
+held in Lisbon, Portugal,\footnote{Webber, B., Carpuat, M., Popescu-Belis, A., \& Hardmeier, C. (2015). \textit{Proceedings of the Second Workshop on Discourse in Machine Translation (DiscoMT 2015)}. Lisbon, Portugal. Association for Computational Linguistics.  \url{http://aclweb.org/anthology/W15-2500}.}, the number of submitted and accepted paper had increased.  We maintained the idea of a joint poster session with WMT.  Out of 15 submissions,
 5 were accepted as long papers, 3 as short papers, and 4 as posters only.  Moreover, nine papers described shared task submissions and an overview of the two sub-tasks of the shared task.
 
+% APB: find  the numbers for 2017 (in the proceedings?) and the full reference
+
+The third one: \textit{EMNLP Workshop on Discourse in Machine Translation (DiscoMT 2017)} held in Copenhagen\footnote{Webber, B., Popescu-Belis, A., \& Tiedemann, J. (2017). \textit{Proceedings of the Third Workshop on Discourse in Machine Translation (DiscoMT 2017)}. Copenhagen, Denmark. Association for Computational Linguistics.  \url{http://aclweb.org/anthology/W17-4800}.}
+
+We had 4+1 long talks, 3+0 short talks, and 2+4 posters (indicating ``research'' + ``shared task'').
+Or in other words 4 long talks, 3 short talks, 2 posters, and then the shared task overview talk, and 4 system posters.
+In fact, all submissions were accepted (which is not such a great thing)!  One was withdrawn because accepted to EMNLP.
+
+
+
 \section{Shared tasks: DiscoMT 2015, WMT 2016, and DiscoMT 2017}
+
+% APB: I would shorten this quite a lot, add something about WMT 2018 evaluations on pronouns.
+% The goal is mostly to explain why we don't do a shared task.
 
 Pronoun translation is a problem that has been independently approached
 by different researchers in the last few years, which led to the organization of two shared tasks, in 2015 and 2016.
@@ -186,110 +303,7 @@ was a  classification  task  in which  participants  were  asked  to  provide pr
 
 We foresee the organization of a shared task on pronoun translation at DiscoMT 2017.  Minutes have been taken after the concluding discussion at the WMT 2016 shared task, and plans have been made for a 2017 shared task.  The idea is to maintain a sub-task on EN/FR/DE pronoun prediction (given the source text and a lemmatized (or ``impoverished'') version of the target text stripped of its pronouns), but to consider again the possibility of a pronoun-focused translation task, while attempting to solve the evaluation issues (trade-off between cost and accuracy) related to it.
 
-\section{Timeline}
-
-\textcolor{magenta}{ACL: call for papers before Christmas and deadline 26 April, notification 24 May. Reviewing will happen in May then.} 
-
-\section{Organizational Information}
-
-The proposed workshop has a small set of \textbf{Co-Chairs}, with responsibility
-for scientific and administrative matters involved in delivering a workshop.  The members of 
-the \textbf{Programme Committee} will mainly be responsible for reviewing submissions, but 
-they will also be consulted for matters related to the organization and
-intellectual content of the workshop.  A separate group will have responsibility for the Shared Task,
-and liaise with the Co-Chairs regarding in particular the quality of the system papers.  The responsible
-person for the shared task will be a co-editor of the proceedings volume as well.
-
-\medskip
-
-\textbf{Co-Chairs:}
-\begin{itemize}
-
-\item Christian Hardmeier
-
-
-
-\item Sharid Loáiciga
-
-\item  Andrei Popescu-Belis <andrei.popescu-belis@idiap.ch>\\
-Idiap Research Institute, Centre du Parc, Rue Marconi 19, PO Box 592,
-1920 Martigny, Switzerland\\
-\url{http://www.idiap.ch/~apbelis/}\\
-Phone: +41 27 721 7729\\
-Expertise/Interests: Andrei's research focuses on language processing at the discourse-level, 
-in particular reference and anaphora resolution, discourse markers and
-connectives, and dialogue acts; the evaluation of NLP and interactive
-systems, including machine translation systems and meeting browsers;
-and language and multimodal resources.
-
-
-\end{itemize}
-
-\medskip
-
-\textbf{Tentative Programme Committee}
-
-\textcolor{magenta}{75\% should be approved}
-
-\begin{itemize}
-\item Beata Beigman Klebanov, Educational Testing Service, New Jersey USA
-\item Thomas Brovelli, Google, Zurich, Switzerland
-\item Marine Carpuat, University of Washington, Seattle, US
-\item Mauro Cettolo, Fondazione Bruno Kessler, Trento, Italy
-\item Marta Costa-jussà, Universitat Politècnica de Catalunya, Spain (confirmed)
-\item Zhengxian Gong, Soochow University, China (confirmed)
-\item Liane Guillou, University of Edinburgh, UK
-\item Francisco Guzm\'{a}n, Facebook, US
-\item Gholamreza Haffari, Monash University, Clayton, Australia
-\item Shafiq Joty, Nanyang Technological University, Singapore (confirmed)
-\item Ekaterina Lapshinova-Kultunsky, Saarland University, Saarbrücken, Germany 
-\item Lori Levin, Language Technologies Institute, Carnegie Mellon University, Pittsburgh, PA, USA
-\item Lesly Miculicich-Werlen, Idiap Research Institute, Martigny, Switzerland (confirmed)
-\item Preslav Nakov, Qatar Computing Research Institute, Doha, Qatar (confirmed)
-\item Ani Nenkova, University of Pennsylvania, USA
-\item Michal Novak, Charles University, Prague CZ
-\item Lucie Pol\'{a}kov\'{a}, Charles University, Prague CZ
-\item Maja Popovic, DFKI, Berlin DE
-\item Annette Rios, University of Zurich, Switzerland
-\item Rico Sennrich, University of Edinburgh, UK (confirmed)
-\item Lucia Specia, Imperial College London, UK
-\item Sara Stymne, Uppsala University, Uppsala, Sweden
-\item Jörg Tiedemann, University of Helsinki, Finland (confirmed)
-\item Yannick Versley, University of Heidelberg, Heidelberg, Germany
-\item Martin Volk, University of Zurich, Zurich, Switzerland
-\item Bonnie Webber, University of Edinburgh, UK
-\item Kellie Webster, Google, New York, US (confirmed)
-\item Min Zhang, Soochow University, Suzhou, China
-\item Sandrine Zufferey, University of Bern, Switzerland
-\end{itemize}
-
-\section{Invited Speakers and sources for funding}
-
-
-
-\section{Diversity}
-
-Account of efforts for diversity of speakers, program committee members and participants
-
-Balance invited speakers
-
-Balance committee: gender, geography, community is very Europe-oriented, but active efforts to recruit people from outside Europe, compared to previous years. 
-
-
-
-\section{Other Information}
-
-\begin{itemize}
-\item \textbf{Proposed workshop length:} One day (Ideally, this would coincide with
-the second day of the Workshop on Machine Translation, so that the two workshops could
-share a poster session.)
-
-\item \textbf{Estimated number of attendees:} 25-30 people
-
-\item \textbf{Special requirements or technical needs:} None
-
-\item \textbf{Preferred venue:} \textcolor{magenta}{ACL Florence, community is mostly in Europe but maily WMT will try to be there and we want to be together.} 
-\end{itemize}
+https://aclanthology.coli.uni-saarland.de/papers/W18-6435/w18-6435 % the wmt 2018 paper on evaluating on pronouns
 
 
 \end{document}
